Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/Display.cc:  Apply Gilles's patch for ellipses bug #844828.

Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * test/{t_validwords,t_templates,t_fuzzy,t_factors}
    * test/{set_attr,synonym_dict,dummy.stems,dummy.affixes,bad_word_list}
    * test/conf/main-template test/htdocs/set1/{site2.html,site4.html}:
      Added four new tests to test suite.  Not included in "make check",
      but can be run explicitly by "make TESTS=t_... check".

Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/conf_lexer.{lxx,cxx}:
      Back out changes to try to accept files without EOL :(

Sat Dec 13 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/defaults.{cc,xml}, htdoc/{attrs,cf_byprog}.html:
      Fix "used by" for  max_excerpts,  and resulting hyperlinks.

Sat Nov 22 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/conf_lexer.{lxx,cxx}, htcommon/conf_parser.{yxx,cxx}:
      Partially address bug #823455.
      Don't complain if config file doesn't end in EOL.
      Should the grammar be fixed not to need EOL?
      Report errors to  stderr,  not  stdout,  as they confuse the web server.

Sun Nov 9 14:44:02 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * Tagged release htdig-3-2-0b5

Sat Nov 8 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/default.cc, htsearch/parser.cc:  Fix bug #825877
      Reduce  backlink_factor  to comparable with other factors, and
      interpret  multimatch_factor  as the *bonus* given for multiple matches.

Sat Nov 1 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/parser.cc: Fix bug #806419. Ignore bad words at start of phrase.

Tue Oct 28 11:58:06 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdig/htdig.cc: set the debug level when we are importing a cookie file.
    Fix bug #831478.
